UnifyNetSDK/gen_ctypes_file/_1_original/HK_PlaySDK.h

typedef struct _VCA_RECT_F_
{
    float x;         //矩形左上角X轴坐标
    float y;         //矩形左上角Y轴坐标
    float width;     //矩形宽度
    float height;    //矩形高度
}VCA_RECT_F;
//目标信息结构体
typedef struct _VCA_TARGET_EX
{
    unsigned int      ID;          //ID
    unsigned char     reserved[8]; //保留字节
    VCA_RECT_F        rect;        //目标框
    unsigned char     reserved1[40]; //私有信息扩展字段，暂时以unsigned char数组表示，如果外部有需求再告知具体结构与信息
}VCA_TARGET_EX;
typedef struct _VCA_TARGET_LIST_EX
{
    unsigned int    target_num;             //目标数量
    VCA_TARGET_EX   *pstTarget;             //目标内容，按照VCA_TARGET_EX的大小进行偏移读取各个目标具体的信息即可
}VCA_TARGET_LIST_EX;
//智能信息结构体回调用
typedef struct _INTEL_INFO_EX
{
    unsigned int                   type;               ///< 标记回调出了哪些私有信息类型
    VCA_TARGET_LIST_EX             stTarget;           ///< 目标
    VCA_TARGET_LIST_EX             stTarget_EX;        ///< 深眸目标
}INTEL_INFO_EX;
/////////////////////////////////////////////////////////////////////////////////////////////
//IVS新智能信息回调接口结构体定义
/////////////////////////////////////////////////////////////////////////////////////////////

///                                目标框                           ///
typedef struct _VCA_POINT_F_
{
    float x;
    float y;
}VCA_POINT_F;
//多边形(浮点型)
typedef struct _VCA_POLYGON_F_
{
    unsigned int  vertex_num;                  //顶点数
    VCA_POINT_F   point[10];   //顶点
}VCA_POLYGON_F;
//旋转矩形
typedef struct _VCA_ROTATE_RECT_F_
{
    float				  cx;						// 矩形中心点X轴坐标
    float				  cy;						// 矩形中心点Y轴坐标
    float				  width;					// 矩形宽度
    float				  height;					// 矩形高度
    float				  theta;				   // 旋转矩形角度
}VCA_ROTATE_RECT_F;
//区域联合体
typedef struct _VCA_REGION_
{
    unsigned int region_type;           // 参考VCA_REGION_TYPE，2表示多边形，3表示矩形
    char         reserved[12];
    union
    {
        unsigned char		size[84];
        VCA_POLYGON_F       polygon;                // 多边形
        VCA_RECT_F          rect;                   // 矩形
        VCA_ROTATE_RECT_F 	rotate_rect;	 		 // 旋转矩形,暂不支持
    };
}VCA_REGION;
//单个目标框结构体
typedef struct 
{
    unsigned int            id;
    unsigned int            blob_type;        // 目标类_OBJ_TYPE
    short                   confidence;       // 目标框置信度
    char                    reserved[14];
    VCA_REGION              region;           // 目标位置区域
    unsigned char           privt_info[40];   // 扩展信息
}HIK_TARGET_BLOB_EX;
//目标框列表信息定义：
typedef struct _VCA_TARGET_LIST_V1_EX_
{
    unsigned int         LineType;      //框类型，0表示矩形框，1表示四角框
    unsigned int         target_num;    //目标数量
    HIK_TARGET_BLOB_EX   *pstTarget;    //目标内容，按照HIK_TARGET_BLOB_EX的大小进行偏移读取各个目标具体的信息即可
}VCA_TARGET_LIST_V1_EX;
///                                规则框                           ///
//单个规则框结构体
typedef struct _VCA_RULE_EX
{
    unsigned char       ID;               //规则ID
    unsigned char       reserved[15];       //保留字节
    VCA_POLYGON_F       polygon;         //规则对应的多边形区域
    unsigned char       privt_info[40];      // 扩展信息
}VCA_RULE_EX;
//规则框列表信息定义：
typedef struct _VCA_RULE_LIST_V3_EX_
{
    unsigned int  LineType;      //框类型，0表示矩形框，1 表示四角框
    unsigned int  rule_num;     //链表中规则数量
    VCA_RULE_EX   *pstRule;   //规则内容，按照VCA_RULE_EX的大小进行偏移读取各个目标具体的信息即可
}VCA_RULE_LIST_V3_EX;
///                                报警框                           ///

typedef struct  _VCA_ALERT_EX_
{
    unsigned char     alert;           //有无报警信息: 0-没有，1-有
    unsigned char     reserved[7];     //保留字节
    VCA_RULE_EX       rule_info;       //报警规则信息
    VCA_TARGET_EX        target;          //报警目标信息
    unsigned char     privt_info[40];  // 扩展信息
}VCA_ALERT_EX;
//报警信息定义：
typedef struct  _VCA_ALERT_LIST_EX_
{
    unsigned int           alert_num;  //报警数量
    VCA_ALERT_EX           *pstAlert; 
}VCA_ALERT_LIST_EX;
//智能信息结构体回调用
typedef struct _PRIVATE_INFO_
{
    unsigned int                  type;    ///< 标记回调出了哪些私有信息类型
    VCA_TARGET_LIST_V1_EX         stTarget;           ///< 普通目标框，类型 1
    VCA_TARGET_LIST_V1_EX         stTarget_EX;        ///< 深眸目标框，类型 2
    VCA_RULE_LIST_V3_EX           stRule;             ///< 普通规则框，类型 4
    VCA_RULE_LIST_V3_EX           stRule_EX;          ///< 深眸规则框，类型 8
    VCA_ALERT_LIST_EX             stAlert;            ///< 报警信息，类型 16
} PRIVATE_INFO;
typedef struct _HIK_MEDIAINFO_
{
    unsigned int    media_fourcc;           // "HKMI": 0x484B4D49 Hikvision Media Information
    unsigned short  media_version;          // 版本号：指本信息结构版本号，目前为0x0101,即1.01版本，01：主版本号；01：子版本号。
    unsigned short  device_id;              // 设备ID，便于跟踪/分析
    unsigned short  system_format;          // 系统封装层
    unsigned short  video_format;           // 视频编码类型
    unsigned short  audio_format;           // 音频编码类型
    unsigned char   audio_channels;         // 通道数  
    unsigned char   audio_bits_per_sample;  // 样位率
    unsigned int    audio_samplesrate;      // 采样率 
    unsigned int    audio_bitrate;          // 压缩音频码率,单位：bit
    unsigned int    reserved[4];            // 保留
}HIK_MEDIAINFO;
typedef struct
{
    long nPort;
    char * pBuf;
    long nBufLen;
    long nWidth;
    long nHeight;
    long nStamp;
    long nType;
    void* nUser;
}DISPLAY_INFO;
typedef struct
{
    long nPort;
    char *pVideoBuf;
    long nVideoBufLen;
    char *pPriBuf;
    long nPriBufLen;
    long nWidth;
    long nHeight;
    long nStamp;
    long nType;
    void* nUser;
}DISPLAY_INFOEX;
typedef struct
{
    long         nPort;        //通道号
    char         *pBuf;        //返回的第一路图像数据指针
    unsigned int nBufLen;      //返回的第一路图像数据大小
    char         *pBuf1;       //返回的第二路图像数据指针
    unsigned int nBufLen1;     //返回的第二路图像数据大小
    char         *pBuf2;       //返回的第三路图像数据指针
    unsigned int nBufLen2;     //返回的第三路图像数据大小
    unsigned int nWidth;       //画面宽
    unsigned int nHeight;      //画面高
    unsigned int nStamp;       //时标信息，单位毫秒
    unsigned int nType;        //数据类型
    void         *pUser;       //用户数据
    unsigned int reserved[4];  //保留
}DISPLAY_INFO_YUV;