UnifyNetSDK/haikang/hk_playsdk_wrapper.py


struct__VCA_TARGET_EX.__slots__ = [
    'ID',
    'reserved',
    'rect',
    'reserved1',
]
struct__VCA_TARGET_EX._fields_ = [
    ('ID', c_uint),
    ('reserved', c_ubyte * int(8)),
    ('rect', VCA_RECT_F),
    ('reserved1', c_ubyte * int(40)),
]

VCA_TARGET_EX = struct__VCA_TARGET_EX# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 229

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 234
class struct__VCA_TARGET_LIST_EX(Structure):
    pass

struct__VCA_TARGET_LIST_EX.__slots__ = [
    'target_num',
    'pstTarget',
]
struct__VCA_TARGET_LIST_EX._fields_ = [
    ('target_num', c_uint),
    ('pstTarget', POINTER(VCA_TARGET_EX)),
]

VCA_TARGET_LIST_EX = struct__VCA_TARGET_LIST_EX# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 234

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 240
class struct__INTEL_INFO_EX(Structure):
    pass

struct__INTEL_INFO_EX.__slots__ = [
    'type',
    'stTarget',
    'stTarget_EX',
]
struct__INTEL_INFO_EX._fields_ = [
    ('type', c_uint),
    ('stTarget', VCA_TARGET_LIST_EX),
    ('stTarget_EX', VCA_TARGET_LIST_EX),
]

INTEL_INFO_EX = struct__INTEL_INFO_EX# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 240

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 245
class struct__VCA_POINT_F_(Structure):
    pass

struct__VCA_POINT_F_.__slots__ = [
    'x',
    'y',
]
struct__VCA_POINT_F_._fields_ = [
    ('x', c_float),
    ('y', c_float),
]

VCA_POINT_F = struct__VCA_POINT_F_# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 245

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 250
class struct__VCA_POLYGON_F_(Structure):
    pass

struct__VCA_POLYGON_F_.__slots__ = [
    'vertex_num',
    'point',
]
struct__VCA_POLYGON_F_._fields_ = [
    ('vertex_num', c_uint),
    ('point', VCA_POINT_F * int(10)),
]

VCA_POLYGON_F = struct__VCA_POLYGON_F_# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 250

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 258
class struct__VCA_ROTATE_RECT_F_(Structure):
    pass

struct__VCA_ROTATE_RECT_F_.__slots__ = [
    'cx',
    'cy',
    'width',
    'height',
    'theta',
]
struct__VCA_ROTATE_RECT_F_._fields_ = [
    ('cx', c_float),
    ('cy', c_float),
    ('width', c_float),
    ('height', c_float),
    ('theta', c_float),
]

VCA_ROTATE_RECT_F = struct__VCA_ROTATE_RECT_F_# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 258

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 263
class union_anon_403(Union):
    pass

union_anon_403.__slots__ = [
    'size',
    'polygon',
    'rect',
    'rotate_rect',
]
union_anon_403._fields_ = [
    ('size', c_ubyte * int(84)),
    ('polygon', VCA_POLYGON_F),
    ('rect', VCA_RECT_F),
    ('rotate_rect', VCA_ROTATE_RECT_F),
]

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 270
class struct__VCA_REGION_(Structure):
    pass

struct__VCA_REGION_.__slots__ = [
    'region_type',
    'reserved',
    'unnamed_1',
]
struct__VCA_REGION_._anonymous_ = [
    'unnamed_1',
]
struct__VCA_REGION_._fields_ = [
    ('region_type', c_uint),
    ('reserved', c_char * int(12)),
    ('unnamed_1', union_anon_403),
]

VCA_REGION = struct__VCA_REGION_# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 270

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 279
class struct_anon_404(Structure):
    pass

struct_anon_404.__slots__ = [
    'id',
    'blob_type',
    'confidence',
    'reserved',
    'region',
    'privt_info',
]
struct_anon_404._fields_ = [
    ('id', c_uint),
    ('blob_type', c_uint),
    ('confidence', c_short),
    ('reserved', c_char * int(14)),
    ('region', VCA_REGION),
    ('privt_info', c_ubyte * int(40)),
]

HIK_TARGET_BLOB_EX = struct_anon_404# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 279

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 285
class struct__VCA_TARGET_LIST_V1_EX_(Structure):
    pass

struct__VCA_TARGET_LIST_V1_EX_.__slots__ = [
    'LineType',
    'target_num',
    'pstTarget',
]
struct__VCA_TARGET_LIST_V1_EX_._fields_ = [
    ('LineType', c_uint),
    ('target_num', c_uint),
    ('pstTarget', POINTER(HIK_TARGET_BLOB_EX)),
]

VCA_TARGET_LIST_V1_EX = struct__VCA_TARGET_LIST_V1_EX_# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 285

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 292
class struct__VCA_RULE_EX(Structure):
    pass

struct__VCA_RULE_EX.__slots__ = [
    'ID',
    'reserved',
    'polygon',
    'privt_info',
]
struct__VCA_RULE_EX._fields_ = [
    ('ID', c_ubyte),
    ('reserved', c_ubyte * int(15)),
    ('polygon', VCA_POLYGON_F),
    ('privt_info', c_ubyte * int(40)),
]

VCA_RULE_EX = struct__VCA_RULE_EX# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 292

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 298
class struct__VCA_RULE_LIST_V3_EX_(Structure):
    pass

struct__VCA_RULE_LIST_V3_EX_.__slots__ = [
    'LineType',
    'rule_num',
    'pstRule',
]
struct__VCA_RULE_LIST_V3_EX_._fields_ = [
    ('LineType', c_uint),
    ('rule_num', c_uint),
    ('pstRule', POINTER(VCA_RULE_EX)),
]

VCA_RULE_LIST_V3_EX = struct__VCA_RULE_LIST_V3_EX_# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 298

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 306
class struct__VCA_ALERT_EX_(Structure):
    pass

struct__VCA_ALERT_EX_.__slots__ = [
    'alert',
    'reserved',
    'rule_info',
    'target',
    'privt_info',
]
struct__VCA_ALERT_EX_._fields_ = [
    ('alert', c_ubyte),
    ('reserved', c_ubyte * int(7)),
    ('rule_info', VCA_RULE_EX),
    ('target', VCA_TARGET_EX),
    ('privt_info', c_ubyte * int(40)),
]

VCA_ALERT_EX = struct__VCA_ALERT_EX_# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 306

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 311
class struct__VCA_ALERT_LIST_EX_(Structure):
    pass

struct__VCA_ALERT_LIST_EX_.__slots__ = [
    'alert_num',
    'pstAlert',
]
struct__VCA_ALERT_LIST_EX_._fields_ = [
    ('alert_num', c_uint),
    ('pstAlert', POINTER(VCA_ALERT_EX)),
]

VCA_ALERT_LIST_EX = struct__VCA_ALERT_LIST_EX_# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 311

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 320
class struct__PRIVATE_INFO_(Structure):
    pass

struct__PRIVATE_INFO_.__slots__ = [
    'type',
    'stTarget',
    'stTarget_EX',
    'stRule',
    'stRule_EX',
    'stAlert',
]
struct__PRIVATE_INFO_._fields_ = [
    ('type', c_uint),
    ('stTarget', VCA_TARGET_LIST_V1_EX),
    ('stTarget_EX', VCA_TARGET_LIST_V1_EX),
    ('stRule', VCA_RULE_LIST_V3_EX),
    ('stRule_EX', VCA_RULE_LIST_V3_EX),
    ('stAlert', VCA_ALERT_LIST_EX),
]

PRIVATE_INFO = struct__PRIVATE_INFO_# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 320

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 336
class struct__HIK_MEDIAINFO_(Structure):
    pass

struct__HIK_MEDIAINFO_.__slots__ = [
    'media_fourcc',
    'media_version',
    'device_id',
    'system_format',
    'video_format',
    'audio_format',
    'audio_channels',
    'audio_bits_per_sample',
    'audio_samplesrate',
    'audio_bitrate',
    'reserved',
]
struct__HIK_MEDIAINFO_._fields_ = [
    ('media_fourcc', c_uint),
    ('media_version', c_ushort),
    ('device_id', c_ushort),
    ('system_format', c_ushort),
    ('video_format', c_ushort),
    ('audio_format', c_ushort),
    ('audio_channels', c_ubyte),
    ('audio_bits_per_sample', c_ubyte),
    ('audio_samplesrate', c_uint),
    ('audio_bitrate', c_uint),
    ('reserved', c_uint * int(4)),
]

HIK_MEDIAINFO = struct__HIK_MEDIAINFO_# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 336

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 348
class struct_anon_405(Structure):
    pass

struct_anon_405.__slots__ = [
    'nPort',
    'pBuf',
    'nBufLen',
    'nWidth',
    'nHeight',
    'nStamp',
    'nType',
    'nUser',
]
struct_anon_405._fields_ = [
    ('nPort', c_long),
    ('pBuf', String),
    ('nBufLen', c_long),
    ('nWidth', c_long),
    ('nHeight', c_long),
    ('nStamp', c_long),
    ('nType', c_long),
    ('nUser', POINTER(None)),
]

DISPLAY_INFO = struct_anon_405# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 348

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 361
class struct_anon_406(Structure):
    pass

struct_anon_406.__slots__ = [
    'nPort',
    'pVideoBuf',
    'nVideoBufLen',
    'pPriBuf',
    'nPriBufLen',
    'nWidth',
    'nHeight',
    'nStamp',
    'nType',
    'nUser',
]
struct_anon_406._fields_ = [
    ('nPort', c_long),
    ('pVideoBuf', String),
    ('nVideoBufLen', c_long),
    ('pPriBuf', String),
    ('nPriBufLen', c_long),
    ('nWidth', c_long),
    ('nHeight', c_long),
    ('nStamp', c_long),
    ('nType', c_long),
    ('nUser', POINTER(None)),
]

DISPLAY_INFOEX = struct_anon_406# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 361

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 377
class struct_anon_407(Structure):
    pass

struct_anon_407.__slots__ = [
    'nPort',
    'pBuf',
    'nBufLen',
    'pBuf1',
    'nBufLen1',
    'pBuf2',
    'nBufLen2',
    'nWidth',
    'nHeight',
    'nStamp',
    'nType',
    'pUser',
    'reserved',
]
struct_anon_407._fields_ = [
    ('nPort', c_long),
    ('pBuf', String),
    ('nBufLen', c_uint),
    ('pBuf1', String),
    ('nBufLen1', c_uint),
    ('pBuf2', String),
    ('nBufLen2', c_uint),
    ('nWidth', c_uint),
    ('nHeight', c_uint),
    ('nStamp', c_uint),
    ('nType', c_uint),
    ('pUser', POINTER(None)),
    ('reserved', c_uint * int(4)),
]

DISPLAY_INFO_YUV = struct_anon_407# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 377

# C:\\Users\\Administrator\\Documents\\CodeProject\\headfile\\UnifyNetSDK\\gen_ctypes_file\\_3_replace\\HK_PlaySDK.h: 387
class struct_PLAYM4_SYSTEM_TIME(Structure):
    pass
